# fetlang

./: .gitattributes  .gitignore  .travis.yml  LICENSE  LICENSE.md  README.md
.github/workflows/: c-cpp.yml
docs/: comments.md  control flow.md  fetishes.md  grammar.md  reference.md  tutorial.md  types.md  variables.md
docs/c_reference/: assertiveness.md  core.md  manhandling.md  obedience.md
docs/reference/: assertiveness.md  core.md  manhandling.md  obedience.md
examples/: a.c  beer.fet  bf2c.fet  brainfuck.fet  cat.fet  echo.fet  fibonacci.fet  fizzbuzz.fet  hello.fet  list_arguments.fet
fetishes/assertiveness/: fetish.json  unit.fet
fetishes/assertiveness/include/: assert.h
fetishes/assertiveness/source/: assert.c
fetishes/core/: a.c  fetish.json  unit.fet
fetishes/core/include/: avr_compat.h  chain.h  compatibility.h  error.h  fraction.h  fraction_math.h  statistics.h  typedefs.h
fetishes/core/source/: chain.c  error.c  fraction.c  fraction_math.c  statistics.c
fetishes/core/tests/: chain.cpp  fraction.cpp
fetishes/manhandling/: fetish.json  unit.fet
fetishes/manhandling/include/: filemanip.h
fetishes/manhandling/source/: filemanip.cpp  raw_filemanip.rs
fetishes/obedience/: fetish.json  unit.fet
fetishes/obedience/include/: chain.h  fileio.h
fetishes/obedience/source/: chain.c  fileio.c  filemanip.cpp
fetishes/obedience/tests/: fileio.cpp
logs/: ubuntu.c
scripts/: .clang-format  c_reference_make.py  checkdiff.sh  common.py  fetlang_reference_make.py  format.sh  make_reference_docs.py
src/: Builder.cpp  Builder.h  CompilationProcess.cpp  CompilationProcess.h  FetType.h  FetlangException.cpp  FetlangException.h  FetlangManager.cpp  FetlangManager.h  FileUtil.cpp  FileUtil.h  Fraction.cpp  Fraction.h  FractionParser.cpp  FractionParser.h  Gender.h  Grammar.cpp  Grammar.h  KeyphraseCategory.h  Operator.cpp  Operator.h  Parser.cpp  Parser.h  Pronoun.h  QuoteUtil.cpp  QuoteUtil.h  SyntaxTree.cpp  SyntaxTree.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  Transpiler.cpp  Transpiler.h  Variable.cpp  Variable.h  VariableCollection.cpp  VariableCollection.h  main.cpp  meson.build  (+2 more)
src/tests/: compilation.cpp  file_util.cpp  fraction.cpp  fraction_parser.cpp  main.cpp  parser.cpp  quote_util.cpp  tokenizer.cpp
